2007-06-22  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/Pdfdoc.py: 0001055: Pictures of the gallery are not used in the
	  detailed ancestor's report when output format is PDF

2007-06-21  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditFamily.py (EditFamily.__do_save): Disconnect
	all signal handlers before committing data.
	* src/GrampsCfg.py (cb_format_changed): Catch new exception;
	escape special chars from displayed span.
	* src/NameDisplay.py (_gen_cooked_func): Only replace known
	parameters, leave the rest as is;
	(_format_str_base): Catch formatting exceptions and raise our own.
	* src/Errors.py (NameDisplayError): Add class. 

2007-06-22  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/NameDisplay.py: fix indentation (use only spaces).
	* src/GrampsCfg.py: handle invalid name format: #1025.

2007-06-20  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_RelationshipPathBetween.py
	(apply_filter): Object/handle mixup, #1090.
	* src/DbLoader.py (DbLoader.read_file): Properly report problem.

2007-06-19  Alex Roitman  <shura@gramps-project.org>
	* src/FilterEditor/_FilterEditor.py (_find_dependent_filters):
	Add method to first find all filters fo deletion.

2007-06-19  Alex Roitman  <shura@gramps-project.org>
	* src/FilterEditor/_FilterEditor.py (_do_delete_filter): Use a
	copy for iteration over the filters.

2007-06-18  Alex Roitman  <shura@gramps-project.org>
	* src/DateEdit.py (DateEditorDialog.switch_calendar): Only convert
	non-empty dates to new calendar.

2007-06-17  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Verify.py: Clarification in wording: #1071.
	* src/GrampsCfg.py (NameFormatEditDlg.cb_format_changed): Catch
	exception when format string is invalid.

2007-06-16  Alex Roitman  <shura@gramps-project.org>
	* src/gramps.py (run): Catch SystemExit exception.
	* src/ArgHandler.py: Use sys.exit() for bailing out.
	* src/GrampsDb/_ReadXML.py (start_url): Correctly parse url type;