@@ -1,4 +1,7 @@
 2007-06-22  Brian Matherly  <brian@gramps-project.org>
+	* src/ReportBase/_ReportDialog.py: Still let REAL exceptions pass through.
+
+2007-06-22  Brian Matherly  <brian@gramps-project.org>
 	* src/docgen/Pdfdoc.py: 0001055: Pictures of the gallery are not used in the
 	  detailed ancestor's report when output format is PDF
 
